[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlwriter = "0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
anyhow = "1.0.71"
thiserror = "1.0.40"

# for font loading
font-kit = "0.11.0"
rusttype = "0.9.3"
